--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ Blink VIP - $1009.72
   "Saffron VIP": "Saffron VIP",
   "Heidi Free": "Heidi Free",
   "Heidi VIP": "Heidi VIP",
+  "Heidi Free": "Heidi Lavon Free",
+  "Heidi VIP": "Heidi Lavon VIP",
   "Holly Free": "Holly Free",
   "Holly OFTV": "Holly OFTV",
   "Holly VIP": "Holly VIP",
@@ -362,3 +364,4 @@ Blink VIP - $1009.72
   </script>
 </body>
 </html>
+
